--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -4,13 +4,13 @@ on:
   pull_request:
     branches:
       - main
-  push:
-    branches:
-      - feature/getbooksbyID
+  # push:
+  #   branches:
+  #     - feature/getbooksbyID
 
 jobs:
   test:
-    if: github.event_name == 'pull_request' || github.event_name == 'push'
+    if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -25,20 +25,27 @@ jobs:
       - name: Run pytest
         run: pytest || exit 1 # add if test fails, fail the build
 
-  # deploy:
-  #   if: github.event_name == 'push' || github.event_name == 'pull_request'
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - name: Set up Python
-  #       uses: actions/setup-python@v4
-  #       with:
-  #         python-version: '3.9'
-  #     - name: Install dependencies
-  #       run: |
-  #         python -m pip install --upgrade pip
-  #         pip install -r requirements.txt
-  #     - name: Deploy API
-  #       run: |
-  #         echo "Deploying the API with the latest changes..."
-  #         # Add your deployment commands here
+  deploy:
+    if: github.event_name == 'pull_request'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.9'
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      - name: Deploy API # deploy to AWS and run application on EC2 using systemd
+        env:
+          EC2_USER: ubuntu
+          EC2_HOST: ${{ secrets.EC2_HOST }}
+          EC2_KEY: ${{ secrets.EC2_KEY }}
+        run: |
+          echo "Deploying the API with the latest changes..."
+          echo "${{ secrets.EC2_KEY }}" > ec2_key.pem
+          chmod 600 ec2_key.pem
+          ssh -i ec2_key.pem $EC2_USER@$EC2_HOST "cd /home/ubuntu/fastapi-book-project && git pull && sudo systemctl restart fastapi.service"
+          rm ec2_key.pem
