added host key to known host files

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -26,6 +26,7 @@ jobs:
         run: pytest || exit 1 # add if test fails, fail the build
 
   deploy:
+    needs: test
     if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
     steps:
@@ -38,6 +39,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+     - name: Add EC2 host to known hosts
+        run: |
+          ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
       - name: Deploy API # deploy to AWS and run application on EC2 using systemd
         env:
           EC2_USER: ubuntu
