--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -4,9 +4,9 @@ on:
   pull_request:
     branches:
       - main
-  # push:
-  #   branches:
-  #     - feature/getbooksbyID
+  push:
+    branches:
+      - feature/getbooksbyID
 
 jobs:
   test:
