--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -4,9 +4,9 @@ on:
   pull_request:
     branches:
       - main
-  # push:
-  #   branches:
-  #     - feature/getbooksbyID
+  push:
+    branches:
+      - main
 
 jobs:
   test:
@@ -27,7 +27,7 @@ jobs:
 
   deploy:
     needs: test
-    if: github.event_name == 'pull_request'
+    if: github.event_name == 'push'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
