--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,12 +1,12 @@
 name: CI/CD Pipeline for FastAPI Book Project
 run-name: ${{ github.actor }} is deploying Lastest API Version
-# on:
-#   pull_request:
-#     branches:
-#       - main
-#   push:
-#     branches:
-#       - main
+on:
+  pull_request:
+    branches:
+      - main
+  push:
+    branches:
+      - main
 
 jobs:
   test:
