--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,30 +1,11 @@
-name: CI/CD Pipeline for FastAPI Book Project
+name: Deploy Pipeline for FastAPI Book Project
 run-name: ${{ github.actor }} is deploying Lastest API Version
 on:
-  pull_request:
-    branches:
-      - main
   push:
     branches:
       - main
 
 jobs:
-  test:
-    if: github.event_name == 'pull_request'
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.9"
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-      - name: Run pytest
-        run: pytest || exit 1 # add if test fails, fail the build
-
   deploy:
     needs: test
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
